updated page contenet

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
            <div class="col-4">
                 <div class="left-content">
                     <h6>Search for a City:</h6>
-                    <input class="float-left" type="text">
-                    <button type="button"  class="btn btn-primary fab fa-searchengin"></button> 
+                    <input id="userinput" class="float-left" type="text">
+                    <button  type="button"  class="btn btn-primary fab fa-searchengin"></button> 
             
                 </div>
                 
